Fixing page header text spacing

--- a/css/app.css
+++ b/css/app.css
@@ -243,7 +243,7 @@ i.fb { background-position: -39px 0; }
   margin: 1em 0 1.5em;
 }
 
-.pricing-pitch .simple-pricing {
+.pricing-pitch .pitch-heading {
   display: inline-block;
   margin-right: .5em;
 }
